--- a/config/net.mamoe.mirai-api-http/setting.yml
+++ b/config/net.mamoe.mirai-api-http/setting.yml
@@ -1,9 +1,38 @@
-# file: mcl-1.0.3/config/net.mamoe.mirai.api.http/setting.yml
-authKey: graia-mirai-api-http-authkey # 你可以自己设定, 这里作为示范
+# file: "MCL/config/net.mamoe.mirai-api-http/setting.yml"
+## 配置文件中的值，全为默认值
 
-# 可选，缓存大小，默认4096.缓存过小会导致引用回复与撤回消息失败
+## 启用的 adapter, 内置有 http, ws, reverse-ws, webhook
+adapters:
+  - http
+  - ws
+
+## 是否开启认证流程, 若为 true 则建立连接时需要验证 verifyKey
+enableVerify: true
+verifyKey: ServiceVerifyKey
+
+## 开启一些调试信息
+debug: false
+
+## 是否开启单 session 模式, 若为 true，则自动创建 session 绑定 console 中登录的 bot
+## 开启后，接口中任何 sessionKey 不需要传递参数
+## 若 console 中有多个 bot 登录，则行为未定义
+## 确保 console 中只有一个 bot 登陆时启用
+singleMode: false
+
+## 历史消息的缓存大小
+## 同时，也是 http adapter 的消息队列容量
 cacheSize: 4096
 
-enableWebsocket: true # 是否启用 websocket 方式, 若使用 websocket 方式交互会得到更好的性能
-host: '0.0.0.0' # httpapi 服务监听的地址, 错误的设置会造成 Graia Application 无法与其交互
-port: 8080 # httpapi 服务监听的端口, 错误的设置会造成 Graia Application 无法与其交互
+## adapter 的单独配置，键名与 adapters 项配置相同
+adapterSettings:
+  ## 详情看 http adapter 使用说明 配置
+  http:
+    host: localhost
+    port: 8080
+    cors: ["*"]
+
+  ## 详情看 websocket adapter 使用说明 配置
+  ws:
+    host: localhost
+    port: 8080
+    reservedSyncId: -1
